# hospital_back

./: .env.example  .gitattributes  .gitignore  AI_ASSISTANT_README.md  DOCUMENTACION_FUNCIONES.md  DOCUMENTACION_TURN_PDF_DATA.md  LICENSE.txt  README.md  WARP.md  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.ps1  setup.sh  tailwind.config.js
app/: .env  __init__.py  config.py  db.sqlite  main.py  models.py
app/api/: __init__.py  ai_assistant.py  audit.py  auth.py  cashes.py  medic_area.py  payments.py  users.py  webhooks.py
app/api/medic_area/: __init__.py  appointments.py  chat.py  common.py  departments.py  doctors.py  health_insurance.py  locations.py  schedules.py  services.py  specialties.py  turns.py
app/api/ws/: __init__.py  medic_chat.py
app/assets/: chunk-2DW5HR5M.js  chunk-2E254MPJ.js  chunk-2KUBWO5M.js  chunk-2WAWTWTY.js  chunk-3EHAHVAL.js  chunk-3EZW4LGL.js  chunk-3F3ZFDNX.js  chunk-45HCPFNI.js  chunk-4BZVKNQ5.js  chunk-4KZ4ADIE.js  chunk-4O34CRQR.js  chunk-4PPNR7WW.js  chunk-4PV2YIQN.js  chunk-4W6XZAEZ.js  chunk-4XFAXPLM.js  chunk-55SFXTI5.js  chunk-5GFEN4HN.js  chunk-5MLIVNNP.js  chunk-62Y354E2.js  chunk-65MXE2XU.js  chunk-6A4FEDG6.js  chunk-6AOGYQP4.js  chunk-6JBQLTUK.js  chunk-6M6ZJG5C.js  chunk-6QPPNBNE.js  chunk-6X5RN5W3.js  chunk-76DCT7QS.js  chunk-76ZZMIMQ.js  chunk-7FZOI23T.js  chunk-7KU7TUXL.js  chunk-7UMCEKDO.js  chunk-7VWINVQ4.js  chunk-AEATOIBS.js  chunk-AFWW4RV6.js  chunk-AHOWI2A7.js  chunk-AT6ZLWLU.js  chunk-BAQ7BGSC.js  chunk-BGYSHAWR.js  chunk-BHPGA6GI.js  chunk-BIQSG2RD.js  (+155 more)
app/audit/: __init__.py  enum_utils.py  models.py  pipeline.py  repository.py  schemas.py  service.py  sync_audit_enums.py  taxonomy.py  utils.py
app/core/: auth.py  utils.py
app/core/binaries/RUST/storage/: Cargo.toml
app/core/binaries/RUST/storage/src/: lib.rs
app/core/binaries/storage/: Cargo.toml
app/core/binaries/storage/src/: lib.rs  main.rs
app/core/interfaces/: ai_assistant.py  emails.py  medic_area.py  oauth.py  users.py
app/core/services/: ai_assistant_service.py  payment.py  pdf.py  pdf_data.py  storage.py  stripe_payment.py
app/db/: _initial_data.py  cache.py  main.py  session.py
app/migrations/: env.py
app/migrations/versions/: 021820c0820b_initial_migration.py  0f86d3bbf6f4_add_turn_document_tables.py  13ff8febe410_initial_migration.py  1661c1a0e712_.py  1a2b3c4d5e67_add_download_metadata_columns.py  1f2bdb0a3f76_sync_audit_events_schema.py  2558f13aee1a_initial_migration.py  279f716380f3_uuid_s_fields_change.py  2971ef8eab54_initial_migration.py  3bf54f1829a9_fix_appointment_relationship_with_.py  441c9277c345_descripción_de_los_cambios.py  45d5b7a11242_available_turn_field.py  468f6bec112c_initial_migration.py  500a93020747_update_date_for_doctors_and_users.py  598065897212_initial_migration.py  5ecc79925906_initial_migration.py  67cbce1aa404_initial_migration.py  7249316716d1_implement_discount_in_cahs_details_model.py  758c49703aff_health_insurance_implemented.py  78450d1c73c3_delete_and_add_tieme_field_in_turns.py  7d6a2505906a_feacture_append_state_for_doctor_model.py  8106bbe92227_initial_migration.py  95a9e543040e_re_try.py  99af21e3cc34_total_expense_for_benefit_service_in_.py  9b6655ff4200_add_audit_events_table.py  a5f3c8e9d06b_implement_turn_service_link.py  (+13 more)
app/models/: __init__.py  medic_area.py  payment.py  users.py
app/schemas/: __init__.py  ai_assistant.py  auth.py  cashes.py  medica_area.py  payment.py  users.py
app/storage/: __init__.py  main.py  singleton_class.py
app/templates/: index.html
scripts/: __init__.py  sync_enums.py  validate_enum_sync.py
src/: App.tsx  index.css
src/lib/: utils.ts
src/pages/: Dashboard.tsx
test/: __init__.py  auth.http  conftest.py  fetch_utils.py  temp_ttl_check.py  test_audit_enum_mapping.py  test_audit_pipeline.py  test_enum_sync.py  test_http_client.py  test_medic_area_patients_endpoint.py  test_medica_area_schema_exports.py  test_models_entities.py  test_pdf_data_service.py  test_schedules_available_days.py  test_storage_service.py  test_turn_and_appointment_creation.py  test_turn_reschedule.py  test_turns_permissions.py  test_user_password_update.py  test_ws_client.py
(+73 files in other folders)
