[package]
name = "encript_storage"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = "0.10.1"
rust-argon2 = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.37.0"
chrono = { version = "0.4.42", features = ["serde"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
clap = { version = "4.5", features = ["derive"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]

[[bin]]
name = "encript_storage_cli"
path = "src/main.rs"
