[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "serde"] }
pyo3-serde = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.7"
tempfile = "3.6"
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }  # XChaCha20-Poly1305
argon2 = "0.4"
base64 = "0.21"
rusqlite = { version = "0.29", features = ["bundled"] }
